# Cliente-Servidor-Socket-UDP

./: CMakeLists.txt  README.md  cliente.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.c
